[tool.poetry]
name = "invoice-AI-Agent"
version = "0.1.0"
description = "An AI agent to invoice automation"

[tool.poetry.dependencies]
python = "^3.12"
langchain = ">=0.1.0"
langgraph = ">=0.0.10"
langchain-openai = ">=0.0.2"
playwright = ">=1.40"
ipython = ">=8.0.0"
nest-asyncio = ">=1.5.8"
typing-extensions = ">=4.8.0"
python-dotenv = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
